Customized additional settings tab of device create/update page. Closes #6

--- a/src/main/webapp/app/entities/device/update/device-update.component.html
+++ b/src/main/webapp/app/entities/device/update/device-update.component.html
@@ -336,7 +336,38 @@
           <a ngbNavLink>Additional Settings</a>
           <ng-template ngbNavContent>
             <div class="tab-content">
-              Additional Settings
+              <div class="other-setting-group" formArrayName="settings">
+                <fieldset *ngFor="let setting of settings.controls; let i = index;" [formGroupName]="i">
+                  <div>
+                    <button type="button" class="close" aria-hidden="true" title="Remove"
+                            (click)="removeSetting(i)">&times;</button>
+                  </div>
+                  <div class="form-group">
+                    <label class="form-control-label" jhiTranslate="voipadminApp.option.detail.title" for="field_option">Option</label>
+                    <ng-select [items]="optionsSharedCollection" bindLabel="codeWithDescr" id="field_option" formControlName="option"
+                               (change)="onSettingOptionChange($event, i)"></ng-select>
+                  </div>
+
+                  <div class="form-group" *ngIf="setting.get('option')?.value?.valueType === 'TEXT'">
+                    <input type="text" class="form-control" name="value" id="field_textValue" placeholder="Value"
+                           formControlName="textValue"/>
+                  </div>
+                  <div class="form-group" *ngIf="setting.get('option')?.value?.valueType === 'SELECT'">
+                    <ng-select [items]="settingPossibleValues[i]"
+                               bindLabel="value"
+                               formControlName="selectedValues"
+                               placeholder="Value"
+                               [multiple]="setting.get('option')?.value?.multiple"></ng-select>
+                  </div>
+
+                </fieldset>
+
+                <div *ngIf="optionsSharedCollection.length !== settings.length" class="add-new-setting-button">
+                  <button type="button" id="add-setting" class="btn btn-secondary" (click)="addSetting()">
+                    <span [jhiTranslate]="settings.length === 0 ? 'voipadminApp.setting.action.addNew' : 'voipadminApp.setting.action.setAnother'">Set Option</span>
+                  </button>
+                </div>
+              </div>
             </div>
           </ng-template>
         </li>
