Mostly translated to russian language. Closes #18

--- a/src/main/webapp/app/entities/device-model/update/device-model-update.component.html
+++ b/src/main/webapp/app/entities/device-model/update/device-model-update.component.html
@@ -11,7 +11,7 @@
 
       <ul ngbNav #nav='ngbNav' class="nav-tabs">
         <li ngbNavItem>
-          <a ngbNavLink>General</a>
+          <a ngbNavLink jhiTranslate="voipadminApp.deviceModel.tabs.general">General</a>
           <ng-template ngbNavContent>
             <div class="tab-content">
               <jhi-alert-error></jhi-alert-error>
@@ -216,7 +216,7 @@
         </li>
 
         <li ngbNavItem>
-          <a ngbNavLink>Options</a>
+          <a ngbNavLink jhiTranslate="voipadminApp.deviceModel.tabs.options">Options</a>
           <ng-template ngbNavContent>
             <div class="tab-content">
               <jhi-alert-error></jhi-alert-error>
