--- a/src/main/webapp/app/entities/device/update/device-update.component.html
+++ b/src/main/webapp/app/entities/device/update/device-update.component.html
@@ -7,7 +7,7 @@
 
       <ul ngbNav #nav='ngbNav' class="nav-tabs">
         <li ngbNavItem>
-          <a ngbNavLink>General</a>
+          <a ngbNavLink jhiTranslate="voipadminApp.device.tabs.general">General</a>
           <ng-template ngbNavContent>
             <div class="tab-content">
               <jhi-alert-error></jhi-alert-error>
@@ -256,7 +256,7 @@
         </li>
 
         <li ngbNavItem>
-          <a ngbNavLink>Line Settings</a>
+          <a ngbNavLink jhiTranslate="voipadminApp.device.tabs.line">Line Settings</a>
           <ng-template ngbNavContent>
             <div class="tab-content">
 
@@ -333,7 +333,7 @@
         </li>
 
         <li ngbNavItem>
-          <a ngbNavLink>Additional Settings</a>
+          <a ngbNavLink jhiTranslate="voipadminApp.device.tabs.additional">Additional Settings</a>
           <ng-template ngbNavContent>
             <div class="tab-content">
               <div class="other-setting-group" formArrayName="settings">
