--- a/src/main/webapp/app/entities/device/list/device.component.html
+++ b/src/main/webapp/app/entities/device/list/device.component.html
@@ -32,7 +32,9 @@
     <table class="table table-striped" aria-describedby="page-heading">
       <thead>
         <tr jhiSort [(predicate)]="predicate" [(ascending)]="ascending" [callback]="loadPage.bind(this)">
-          <th scope="col" jhiSortBy="id"><span jhiTranslate="global.field.id">ID</span> <fa-icon icon="sort"></fa-icon></th>
+          <th scope="col" jhiSortBy="model.name">
+            <span jhiTranslate="voipadminApp.device.model">Model</span> <fa-icon icon="sort"></fa-icon>
+          </th>
           <th scope="col" jhiSortBy="mac"><span jhiTranslate="voipadminApp.device.mac">Mac</span> <fa-icon icon="sort"></fa-icon></th>
           <th scope="col" jhiSortBy="inventoryNumber">
             <span jhiTranslate="voipadminApp.device.inventoryNumber">Inventory Number</span> <fa-icon icon="sort"></fa-icon>
@@ -40,50 +42,14 @@
           <th scope="col" jhiSortBy="location">
             <span jhiTranslate="voipadminApp.device.location">Location</span> <fa-icon icon="sort"></fa-icon>
           </th>
-          <th scope="col" jhiSortBy="hostname">
-            <span jhiTranslate="voipadminApp.device.hostname">Hostname</span> <fa-icon icon="sort"></fa-icon>
-          </th>
-          <th scope="col" jhiSortBy="webLogin">
-            <span jhiTranslate="voipadminApp.device.webLogin">Web Login</span> <fa-icon icon="sort"></fa-icon>
-          </th>
-          <th scope="col" jhiSortBy="webPassword">
-            <span jhiTranslate="voipadminApp.device.webPassword">Web Password</span> <fa-icon icon="sort"></fa-icon>
-          </th>
-          <th scope="col" jhiSortBy="dhcpEnabled">
-            <span jhiTranslate="voipadminApp.device.dhcpEnabled">Dhcp Enabled</span> <fa-icon icon="sort"></fa-icon>
+          <th scope="col" jhiSortBy="responsiblePerson.lastName">
+            <span jhiTranslate="voipadminApp.device.responsiblePerson">Responsible Person</span> <fa-icon icon="sort"></fa-icon>
           </th>
           <th scope="col" jhiSortBy="ipAddress">
             <span jhiTranslate="voipadminApp.device.ipAddress">Ip Address</span> <fa-icon icon="sort"></fa-icon>
           </th>
-          <th scope="col" jhiSortBy="subnetMask">
-            <span jhiTranslate="voipadminApp.device.subnetMask">Subnet Mask</span> <fa-icon icon="sort"></fa-icon>
-          </th>
-          <th scope="col" jhiSortBy="defaultGw">
-            <span jhiTranslate="voipadminApp.device.defaultGw">Default Gw</span> <fa-icon icon="sort"></fa-icon>
-          </th>
-          <th scope="col" jhiSortBy="dns1"><span jhiTranslate="voipadminApp.device.dns1">Dns 1</span> <fa-icon icon="sort"></fa-icon></th>
-          <th scope="col" jhiSortBy="dns2"><span jhiTranslate="voipadminApp.device.dns2">Dns 2</span> <fa-icon icon="sort"></fa-icon></th>
-          <th scope="col" jhiSortBy="provisioningMode">
-            <span jhiTranslate="voipadminApp.device.provisioningMode">Provisioning Mode</span> <fa-icon icon="sort"></fa-icon>
-          </th>
-          <th scope="col" jhiSortBy="provisioningUrl">
-            <span jhiTranslate="voipadminApp.device.provisioningUrl">Provisioning Url</span> <fa-icon icon="sort"></fa-icon>
-          </th>
-          <th scope="col" jhiSortBy="ntpServer">
-            <span jhiTranslate="voipadminApp.device.ntpServer">Ntp Server</span> <fa-icon icon="sort"></fa-icon>
-          </th>
-          <th scope="col" jhiSortBy="notes"><span jhiTranslate="voipadminApp.device.notes">Notes</span> <fa-icon icon="sort"></fa-icon></th>
           <th scope="col" jhiSortBy="configuration">
             <span jhiTranslate="voipadminApp.device.configuration">Configuration</span> <fa-icon icon="sort"></fa-icon>
-          </th>
-          <th scope="col" jhiSortBy="model.name">
-            <span jhiTranslate="voipadminApp.device.model">Model</span> <fa-icon icon="sort"></fa-icon>
-          </th>
-          <th scope="col" jhiSortBy="responsiblePerson.lastName">
-            <span jhiTranslate="voipadminApp.device.responsiblePerson">Responsible Person</span> <fa-icon icon="sort"></fa-icon>
-          </th>
-          <th scope="col" jhiSortBy="parent.id">
-            <span jhiTranslate="voipadminApp.device.parent">Parent</span> <fa-icon icon="sort"></fa-icon>
           </th>
           <th scope="col"></th>
         </tr>
@@ -91,24 +57,21 @@
       <tbody>
         <tr *ngFor="let device of devices; trackBy: trackId" data-cy="entityTable">
           <td>
-            <a [routerLink]="['/device', device.id, 'view']">{{ device.id }}</a>
+            <div *ngIf="device.model">
+              <a [routerLink]="['/device-model', device.model?.id, 'view']">{{ device?.model?.vendor?.name }} {{ device.model?.name }}</a>
+            </div>
           </td>
-          <td>{{ device.mac }}</td>
+          <td><a [routerLink]="['/device', device.id, 'view']">{{ device.mac }}</a></td>
           <td>{{ device.inventoryNumber }}</td>
           <td>{{ device.location }}</td>
-          <td>{{ device.hostname }}</td>
-          <td>{{ device.webLogin }}</td>
-          <td>{{ device.webPassword }}</td>
-          <td>{{ device.dhcpEnabled }}</td>
+          <td>
+            <div *ngIf="device.responsiblePerson">
+              <a [routerLink]="['/responsible-person', device.responsiblePerson?.id, 'view']">
+                {{ device.responsiblePerson?.lastName }} {{ device.responsiblePerson?.firstName | firstLetter }} {{ device.responsiblePerson?.secondName | firstLetter }}
+              </a>
+            </div>
+          </td>
           <td>{{ device.ipAddress }}</td>
-          <td>{{ device.subnetMask }}</td>
-          <td>{{ device.defaultGw }}</td>
-          <td>{{ device.dns1 }}</td>
-          <td>{{ device.dns2 }}</td>
-          <td jhiTranslate="{{ 'voipadminApp.ProvisioningMode.' + device.provisioningMode }}">{{ device.provisioningMode }}</td>
-          <td>{{ device.provisioningUrl }}</td>
-          <td>{{ device.ntpServer }}</td>
-          <td>{{ device.notes }}</td>
           <td>
             <a
               *ngIf="device.configuration"
@@ -117,21 +80,6 @@
               >open</a
             >
             <span *ngIf="device.configuration">{{ device.configurationContentType }}, {{ byteSize(device.configuration) }}</span>
-          </td>
-          <td>
-            <div *ngIf="device.model">
-              <a [routerLink]="['/device-model', device.model?.id, 'view']">{{ device.model?.name }}</a>
-            </div>
-          </td>
-          <td>
-            <div *ngIf="device.responsiblePerson">
-              <a [routerLink]="['/responsible-person', device.responsiblePerson?.id, 'view']">{{ device.responsiblePerson?.lastName }}</a>
-            </div>
-          </td>
-          <td>
-            <div *ngIf="device.parent">
-              <a [routerLink]="['/device', device.parent?.id, 'view']">{{ device.parent?.id }}</a>
-            </div>
           </td>
           <td class="text-right">
             <div class="btn-group">
