Removed JHipster mentions from homepage. Closes #22

--- a/src/main/webapp/content/scss/global.scss
+++ b/src/main/webapp/content/scss/global.scss
@@ -178,4 +178,12 @@ VoIP-Admin Custom Styles Below
   margin-top: 20px;
 }
 
+.footer {
+  padding-top: 10px;
+
+  p.author {
+    float: right;
+  }
+}
+
 /* jhipster-needle-scss-add-main JHipster will add new css style */
