--- a/src/main/webapp/app/layouts/footer/footer.component.html
+++ b/src/main/webapp/app/layouts/footer/footer.component.html
@@ -1,3 +1,3 @@
 <div class="footer">
-  <p jhiTranslate="footer">This is your footer</p>
+  <p class="author"><span jhiTranslate="author"></span>, 2021</p>
 </div>
